adds photo analysis service
