# openapi/openapi.json
@@ -413,6 +413,57 @@
           }
         }
       }
+    },
+    "/projects/{project_id}/images/{asset_id}/analyze": {
+      "post": {
+        "tags": [
+          "projects"
+        ],
+        "summary": "Analyze Project Image",
+        "operationId": "analyze_project_image_projects__project_id__images__asset_id__analyze_post",
+        "parameters": [
+          {
+            "name": "project_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Project Id"
+            }
+          },
+          {
+            "name": "asset_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Asset Id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectAssetRead"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -482,6 +533,35 @@
           "ready"
         ],
         "title": "GeojsonStatus"
+      },
+      "GpsCoordinates": {
+        "properties": {
+          "type": {
+            "type": "string",
+            "const": "Point",
+            "title": "Type",
+            "default": "Point"
+          },
+          "coordinates": {
+            "prefixItems": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "number"
+              }
+            ],
+            "type": "array",
+            "maxItems": 2,
+            "minItems": 2,
+            "title": "Coordinates"
+          }
+        },
+        "type": "object",
+        "required": [
+          "coordinates"
+        ],
+        "title": "GpsCoordinates"
       },
       "HTTPValidationError": {
         "properties": {
@@ -627,6 +707,16 @@
               }
             ]
           },
+          "gps_coordinates": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/GpsCoordinates"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
           "created_at": {
             "type": "string",
             "format": "date-time",
@@ -656,6 +746,7 @@
           "date_valid",
           "is_false_call",
           "reviewer_override_category",
+          "gps_coordinates",
           "created_at",
           "updated_at"
         ],
